force-app/main/default/objects/Campaign/fields/nd_Additional_Cost__c.field-meta.xml
<CustomField>
    <fullName>nd_Additional_Cost__c</fullName>
    <label>Additional Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>