force-app/main/default/objects/Campaign/fields/nd_Additional_Cost_Notes__c.field-meta.xml
<CustomField>
    <fullName>nd_Additional_Cost_Notes__c</fullName>
    <label>Additional Cost Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>