force-app/main/default/objects/Campaign/fields/nd_Anticipated_Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Anticipated_Fill_Date__c</fullName>
    <label>Anticipated Fill Date</label>
    <type>Date</type>
</CustomField>