force-app/main/default/objects/Campaign/fields/ND_Appeal_Code__c.field-meta.xml
<CustomField>
    <fullName>ND_Appeal_Code__c</fullName>
    <label>Appeal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>