force-app/main/default/objects/Campaign/fields/nd_Ask_String__c.field-meta.xml
<CustomField>
    <fullName>nd_Ask_String__c</fullName>
    <label>Ask String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>