force-app/main/default/objects/Campaign/fields/ND_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>