force-app/main/default/objects/Campaign/fields/nd_Campaign_Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Campaign_Record_Type_Dev_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Campaign Record Type Dev Name</label>
    <type>Text</type>
</CustomField>