force-app/main/default/objects/Campaign/fields/ND_Channel__c.field-meta.xml
<CustomField>
    <fullName>ND_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Generic Mail</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Personalized Mail</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Staff Phone</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Student Phone</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Volunteer Phone</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Volunteer Visit</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Web Site</label>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>