force-app/main/default/objects/Campaign/fields/nd_Default_Designation__c.field-meta.xml
<CustomField>
    <fullName>nd_Default_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>