force-app/main/default/objects/Campaign/fields/ND_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>ND_Event_Location__c</fullName>
    <label>Event Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>