force-app/main/default/objects/Campaign/fields/nd_Event_Source__c.field-meta.xml
<CustomField>
    <fullName>nd_Event_Source__c</fullName>
    <label>Event Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CVent</fullName>
            </value>
            <value>
                <fullName>HiveBrite</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>