force-app/main/default/objects/Campaign/fields/ND_Event_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Event_Year__c</fullName>
    <description>Event Year used for Campaign Events</description>
    <label>Event Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>