force-app/main/default/objects/Campaign/fields/nd_Group_Region__c.field-meta.xml
<CustomField>
    <fullName>nd_Group_Region__c</fullName>
    <label>Group/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Region</valueSetName>
    </valueSet>
</CustomField>