force-app/main/default/objects/Campaign/fields/nd_Grouping__c.field-meta.xml
<CustomField>
    <fullName>nd_Grouping__c</fullName>
    <label>Grouping (DEPR)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Stadium Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>