force-app/main/default/objects/Campaign/fields/nd_Grouping_Type__c.field-meta.xml
<CustomField>
    <fullName>nd_Grouping_Type__c</fullName>
    <label>Grouping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Basketball Men</fullName>
            </value>
            <value>
                <fullName>Basketball Women</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Stadium Event</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Soccer Men</fullName>
            </value>
            <value>
                <fullName>Soccer Women</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>