force-app/main/default/objects/Campaign/fields/nd_Home_Away__c.field-meta.xml
<CustomField>
    <fullName>nd_Home_Away__c</fullName>
    <label>Home/Away</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>