force-app/main/default/objects/Campaign/fields/nd_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>nd_Job_Number__c</fullName>
    <label>Job Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>