force-app/main/default/objects/Campaign/fields/nd_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>nd_Max_Capacity__c</fullName>
    <label>Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>