force-app/main/default/objects/Campaign/fields/nd_Motivation_Code__c.field-meta.xml
<CustomField>
    <fullName>nd_Motivation_Code__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>ND Motivation Code</label>
    <type>AutoNumber</type>
</CustomField>