force-app/main/default/objects/Campaign/fields/nd_Number_Attended__c.field-meta.xml
<CustomField>
    <fullName>nd_Number_Attended__c</fullName>
    <label>Number Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>