force-app/main/default/objects/Campaign/fields/nd_Opponent__c.field-meta.xml
<CustomField>
    <fullName>nd_Opponent__c</fullName>
    <label>Opponent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>