force-app/main/default/objects/Campaign/fields/nd_Registration_Cost__c.field-meta.xml
<CustomField>
    <fullName>nd_Registration_Cost__c</fullName>
    <label>Registration Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>