force-app/main/default/objects/Campaign/fields/nd_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>nd_Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>