force-app/main/default/objects/Campaign/fields/nd_Time__c.field-meta.xml
<CustomField>
    <fullName>nd_Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>