force-app/main/default/objects/Campaign/fields/nd_Timezone__c.field-meta.xml
<CustomField>
    <fullName>nd_Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>