force-app/main/default/objects/Campaign/fields/nd_Venue__c.field-meta.xml
<CustomField>
    <fullName>nd_Venue__c</fullName>
    <label>Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>