force-app/main/default/objects/Campaign/fields/nd_Weekday__c.field-meta.xml
<CustomField>
    <fullName>nd_Weekday__c</fullName>
    <formula>CASE(
  MOD( StartDate - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
    <label>Weekday</label>
    <type>Text</type>
</CustomField>