force-app/main/default/objects/Campaign/fields/nd_Year__c.field-meta.xml
<CustomField>
    <fullName>nd_Year__c</fullName>
    <description>Used for BEAT</description>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>