force-app/main/default/objects/Campaign/recordTypes/BEAT_Event.recordType-meta.xml
<RecordType>
    <fullName>BEAT_Event</fullName>
    <active>true</active>
    <label>BEAT Event</label>
</RecordType>