force-app/main/default/objects/Campaign/recordTypes/Comprehensive_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Comprehensive_Campaign</fullName>
    <active>true</active>
    <label>Comprehensive Campaign</label>
</RecordType>