force-app/main/default/objects/Campaign/recordTypes/Leadership_Event.recordType-meta.xml
<RecordType>
    <fullName>Leadership_Event</fullName>
    <active>true</active>
    <description>Record Type for Campaign Events</description>
    <label>Campaign Event</label>
</RecordType>