force-app/main/default/objects/Campaign/recordTypes/Weekend_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Weekend_Campaign</fullName>
    <active>true</active>
    <description>BEAT Weekend Campaign</description>
    <label>Weekend Campaign</label>
</RecordType>