force-app/main/default/objects/Campaign/listViews/All_BEAT_Events.listView-meta.xml
<ListView>
    <fullName>All_BEAT_Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>nd_Grouping_Type__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>nd_Time__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>ND_Event_Location__c</columns>
    <columns>nd_Anticipated_Fill_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.BEAT_Event</value>
    </filters>
    <label>All BEAT Events</label>
</ListView>