force-app/main/default/objects/Campaign/listViews/Appeals.listView-meta.xml
<ListView>
    <fullName>Appeals</fullName>
    <columns>ND_Campaign_Code__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>ucinn_ascendv2__Motivation_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.ucinn_ascendv2__Appeal</value>
    </filters>
    <label>Appeals</label>
</ListView>