force-app/main/default/objects/Campaign/listViews/Leadership_Events.listView-meta.xml
<ListView>
    <fullName>Leadership_Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Leadership_Event</value>
    </filters>
    <label>Campaign Events</label>
</ListView>